@@ -1,3 +1,13 @@
+2009-12-08  Christian Dywan  <christian@twotoasts.de>
+
+        Reviewed by Gustavo Noronha Silva.
+
+        Point out the meaning of "Content-Disposition" when implementing the
+        mime-type-policy-decision-requested signal.
+
+        * webkit/webkitwebview.cpp:
+        (webkit_web_view_class_init):
+
 2009-12-07  Gustavo Noronha Silva  <gustavo.noronha@collabora.co.uk>
 
         Reviewed by Xan Lopez.
